[package]
name = "hellotokio"
version = "0.1.0"
authors = ["Hampus Wessman <hampus.wessman@gmail.com>"]
edition = "2018"

[profile.release]
debug = 1

[dependencies]
tokio = { version = "1", features = ["full"] }
parking_lot = "0.11.1"
smallvec = { version = "1.6", features = ["union"] }

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio", "html_reports"]}

[[bench]]
name = "my_benchmark"
harness = false